--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,16 @@ web_modules/
 # Output of 'npm pack'
 *.tgz
 
+# Yarn Zero Installs config
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+
 # Yarn Integrity file
 .yarn-integrity
 
