Updated eslint and run lint:fix

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,6 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "rvest.vs-code-prettier-eslint",
-    "squeeble.mint-it",
+    "squeeble.mint-it"
   ]
 }
