--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint \"src/**/*.{vue,js,jsx,cjs,mjs,ts,tsx,cts,mts}\"",
+    "lint": "prettier --check . && eslint \"src/**/*.{vue,js,jsx,cjs,mjs,ts,tsx,cts,mts}\"",
     "lint:fix": "yarn lint:format && yarn lint:es-fix",
     "lint:es-fix": "eslint --fix \"src/**/*.{vue,js,jsx,cjs,mjs,ts,tsx,cts,mts}\"",
     "lint:format": "prettier --ignore-path .gitignore --write \"src/**/*.{vue,js,jsx,cjs,mjs,ts,tsx,cts,mts}\""
