--- a/package.json
+++ b/package.json
@@ -17,22 +17,25 @@
     "lint:format": "prettier --ignore-path .gitignore --write \"src/**/*.{vue,js,jsx,cjs,mjs,ts,tsx,cts,mts}\""
   },
   "dependencies": {
-    "typescript": "5.1.6",
-    "vue": "^3.3.4",
-    "vue-tsc": "^1.8.10"
+    "typescript": "5.5.4",
+    "vue": "^3.4.33",
+    "vue-tsc": "^2.0.28"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.3",
-    "sass": "^1.66.1",
-    "vite": "^4.4.9",
-    "vue-tsc-eslint-hook": "^1.8.10"
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
+    "@vitejs/plugin-vue": "^5.1.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "eslint": "^9.7.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.27.0",
+    "globals": "^15.8.0",
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8",
+    "vite": "^5.3.4",
+    "vue-tsc-eslint-hook": "^1.8.27"
   }
 }
